src/objects/c2g__codaBankStatementDefinition__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpbankstatementdefinition</customHelpPage>
    <description>Stores the details of a bank statement definition.</description>
    <fields>
        <fullName>c2g__AmountPosition__c</fullName>
        <label>Amount Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>c2g__codaBankAccount__c</referenceTo>
        <relationshipLabel>Bank Statement Definitions</relationshipLabel>
        <relationshipName>BankStatementDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DateFormat__c</fullName>
        <label>Date Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>dd/mm/yyyy</fullName>
                </value>
                <value>
                    <fullName>dd-mm-yyyy</fullName>
                </value>
                <value>
                    <fullName>dd/mm/yy</fullName>
                </value>
                <value>
                    <fullName>dd-mm-yy</fullName>
                </value>
                <value>
                    <fullName>mm/dd/yyyy</fullName>
                </value>
                <value>
                    <fullName>mm-dd-yyyy</fullName>
                </value>
                <value>
                    <fullName>mm/dd/yy</fullName>
                </value>
                <value>
                    <fullName>mm-dd-yy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__DatePosition__c</fullName>
        <label>Date Position</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DecimalPlaces__c</fullName>
        <defaultValue>2</defaultValue>
        <label>Maximum Number of Decimals</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DecimalSeparator__c</fullName>
        <label>Decimal Separator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>, (comma)</fullName>
                </value>
                <value>
                    <fullName>. (period)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__DescriptionPosition__c</fullName>
        <label>Description Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__FileDelimiter__c</fullName>
        <label>File Delimiter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>, (comma)</fullName>
                </value>
                <value>
                    <fullName>; (semicolon)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__PaymentPosition__c</fullName>
        <label>Payment Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentReceiptFormat__c</fullName>
        <label>Payment/Receipt Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Negative Payments / Positive Receipts</fullName>
                    <default>true</default>
                    <label>Negative Payments / Positive Receipts</label>
                </value>
                <value>
                    <fullName>Positive Payments / Negative Receipts</fullName>
                </value>
                <value>
                    <fullName>Two Columns</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__ReceiptPosition__c</fullName>
        <label>Receipt Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ReferencePosition__c</fullName>
        <label>Reference Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__StartRow__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Start Row</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ThousandsSeparator__c</fullName>
        <label>Thousands Separator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>, (comma)</fullName>
                </value>
                <value>
                    <fullName>. (period)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Bank Statement Definition</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__BankAccount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>BSD{0000}</displayFormat>
        <label>Bank Statement Definition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Statement Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>